post-mortem-analysis/incident-slack-2022-02/infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        role: database
      containers:
        - name: mysql
          image: mysql:8.0
          volumeMounts:
            - name: mysql-config
              mountPath: /etc/mysql/conf.d/custom.cnf
              subPath: custom.cnf # Defined in configs.yaml
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          resources:
            limits:
              memory: "450Mi"
              cpu: "500m"
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-config
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306

---
# Deployment and service for mcrouter
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcrouter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcrouter
  template:
    metadata:
      labels:
        app: mcrouter
    spec:
      nodeSelector:
        role: app # On the same node as the app
      containers:
        - name: mcrouter
          image: mcrouter/mcrouter:latest
          command:
            - "mcrouter"
            - "--config-file=/etc/mcrouter/mcrouter.json"
            - "-p"
            - "5000"
          volumeMounts:
            - name: mcrouter-config-volume
              mountPath: /etc/mcrouter/mcrouter.json
              subPath: mcrouter.json
      volumes:
        - name: mcrouter-config-volume
          configMap:
            name: mcrouter-config
---
apiVersion: v1
kind: Service
metadata:
  name: mcrouter-svc
spec:
  selector:
    app: mcrouter
  ports:
    - port: 5000
      targetPort: 5000


# Deployment and service for the Flask app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-clone-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-clone
  template:
    metadata:
      labels:
        app: slack-clone
    spec:
      nodeSelector:
        role: app # Co-located on the same node as Mcrouter
      containers:
        - name: app
          image: justeddocker/incident-simulation-slack-clone:v0.20
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: slack-clone-app-svc
spec:
  selector:
    app: slack-clone
  ports:
    - name: http-api
      port: 8080
      targetPort: 8080


# Deployment and service for memcached
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
spec:
  replicas: 3
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      nodeSelector:
        role: cache
      # AI GENERATED - The idea is that the 2 replicas are on 2 different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values: ["memcached"]
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: memcached
          image: memcached:1.6
---
apiVersion: v1
kind: Service
metadata:
  name: memcached-headless
spec:
  clusterIP: None
  selector:
    app: memcached
  ports:
    - port: 11211
      targetPort: 11211
